unpackaged/main/default/objects/Split_Fee_Definition__c/Split_Fee_Definition__c.object-meta.xml
<CustomObject>
    <label>Split/Fee Definition</label>
    <nameField>
        <displayFormat>SFD-{0000}</displayFormat>
        <label>Split/Fee Definition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Split/Fee Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>