unpackaged/main/default/objects/Split_Fee_Definition__c/fields/Beginning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Threshold__c</fullName>
    <label>Beginning Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>