unpackaged/main/default/objects/Split_Fee_Definition__c/fields/Campaign_Partner__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Partner</label>
    <referenceTo>Campaign_Partner__c</referenceTo>
    <relationshipLabel>Split/Fee Definitions</relationshipLabel>
    <relationshipName>Split_Fee_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>