unpackaged/main/default/objects/Split_Fee_Definition__c/fields/Campaign_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Partner_Name__c</fullName>
    <formula>Campaign_Partner__r.Campaign_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Partner Name</label>
    <type>Text</type>
</CustomField>