unpackaged/main/default/objects/Split_Fee_Definition__c/fields/Ending_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Ending_Threshold__c</fullName>
    <inlineHelpText>Leave this field blank if this is the last Split/Fee Definition record related to the Campaign Partner</inlineHelpText>
    <label>Ending Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>