unpackaged/main/default/objects/Split_Fee_Definition__c/fields/FX_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>FX_Partner_Name__c</fullName>
    <formula>Campaign_Partner__r.Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Name</label>
    <type>Text</type>
</CustomField>