unpackaged/main/default/objects/Split_Fee_Definition__c/fields/Related_Intake_Count__c.field-meta.xml
<CustomField>
    <fullName>Related_Intake_Count__c</fullName>
    <label>Related Intake Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>