unpackaged/main/default/objects/Split_Fee_Definition__c/fields/Split_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Split_Fee_Percent__c</fullName>
    <label>Split/Fee Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>