unpackaged/main/default/objects/Split_Fee_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Partner__c</columns>
    <columns>Campaign_Partner_Name__c</columns>
    <columns>FX_Partner_Name__c</columns>
    <columns>Split_Fee_Percent__c</columns>
    <columns>Beginning_Threshold__c</columns>
    <columns>Ending_Threshold__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>